--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "concurrently": "^8.2.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.4"
+    "@apollo/client": "^3.9.5",
+    "@apollo/react-hooks": "^4.0.0",
+    "apollo-boost": "^0.4.9",
+    "apollo-server-express": "^3.13.0",
+    "dotenv": "^16.4.4",
+    "express": "^4.18.2",
+    "graphql": "^15.8.0"
   }
 }
