--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apollo-server-express": "^3.13.0",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
-    "graphql": "^15.8.0"
+    "graphql": "^15.8.0",
+    "mongodb": "^6.3.0"
   }
 }
